[CG] REGRESSION (r256892): Luminance SVG mask is not applied when accelerated drawing is enabled https://bugs.webkit.org/show_bug.cgi?id=213403 <rdar://problem/64489419>

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2020-06-19
Reviewed by Simon Fraser.

Source/WebCore:

Test: svg/masking/mask-css-luminance.html

If the ImageBuffer is backed by an IOSurface, its context has to be flushed
out before convertToLuminanceMask() can access its data.

* platform/graphics/ConcreteImageBuffer.h:

LayoutTests:

* svg/masking/mask-css-luminance-expected.html: Added.
* svg/masking/mask-css-luminance.html: Added.

Canonical link: https://commits.webkit.org/226203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263297 268f45cc-cd09-0410-ab3c-d52691b4dbfc